# multilingual-vids

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.gpu.yaml  docker-compose.yaml  zeroswot_results.csv
.envs_examples/: .app  .broker  .core-api  .db  .deploy  .frontend  .s3  .worker  .worker-api  .worker-seamless  .worker-zeroshot  .worker-zeroswot
backend/compose/: Dockerfile  start.sh
backend/requirements/: prod.txt
backend/src/: app.py  database.py
backend/src/core/: logging_config.py  settings.py
backend/src/video_tasks/: models.py  repo.py
backend/src/video_tasks/api/: router.py  schemas.py
backend/src/video_tasks/processing/: factory.py  seamless.py  translator.py  video.py  worker.py
core-api/: Dockerfile  pyproject.toml  pytest.ini
core-api/src/: manage.py
core-api/src/config/: celery.py  env_loader.py  health.py  json_log.py  settings.py  settings_test.py  urls.py  wsgi.py
core-api/src/languages/: admin.py  apps.py  lang_mapping.py  models.py
core-api/src/languages/api/: serializers.py  urls.py  views.py
core-api/src/languages/domain/: services.py  types.py
core-api/src/languages/migrations/: 0001_initial.py  0002_zeroshot_language_pairs.py  0003_seamless_languages.py  0004_zeroswot_language_pairs.py
core-api/src/storage/: s3.py
core-api/src/translation_models/: admin.py  apps.py  models.py
core-api/src/translation_models/api/: serializers.py  urls.py  views.py
core-api/src/translation_models/domain/: meta.py  repository.py  services.py  types.py
core-api/src/translation_models/migrations/: 0001_initial.py  0002_seed_models.py
core-api/src/video/: models.py  repository.py  serializers.py  services.py
core-api/src/video/api/: urls.py  views.py
core-api/src/video/management/commands/: configure_s3_cors.py
core-api/src/video/migrations/: 0001_initial.py
core-api/tests/: conftest.py  utils.py
core-api/tests/factories/: __init__.py  languages.py  translation_models.py  video.py
core-api/tests/integration/api/: test_health.py  test_languages.py  test_models.py  test_videos.py
core-api/tests/unit/languages/: test_lang_mapping.py
core-api/tests/unit/translation_models/: test_services.py
core-api/tests/unit/video/: test_video_services.py
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: JobsTable.tsx  Layout.tsx  ModelCard.tsx  ProgressTimeline.tsx  StatusPill.tsx  UploadZone.tsx
frontend/src/pages/: JobDetailPage.tsx  JobsPage.tsx  ModelsPage.tsx  NewJobPage.tsx
infra/nginx/: dev-hot.conf  dev.conf  prod.conf
infra/swarm/: README.md  stack.gpu.yml  stack.ops.yml  stack.portainer.yml  stack.yml
infra/swarm/env/: stack.env  stack.env.example
scripts/: compose-dev.sh  compose-prod.sh  download-hf-model.py  swarm-build-images.sh  swarm-deploy-portainer.sh  swarm-deploy.sh  swarm-init.sh  swarm-label-node.sh  swarm-remove.sh
seamlessM4T_large_v2/: README.md  asr_fleurs_test.csv  s2st_cvss_c_test.csv  s2st_fleurs_test.csv  s2tt_covost2_test.csv  s2tt_fleurs_test.csv  t2st_fleurs_test.csv  t2tt_flores_devtest.csv
worker/: Dockerfile  Dockerfile.gpu  pyproject.toml
worker/scripts/: entrypoint-api.sh  entrypoint-celery-dev.sh  entrypoint-celery.sh
worker/src/common/: compute_device.py  media.py  pipeline_base.py  s3.py
worker/src/config/: celery.py  json_log.py  middleware.py  settings.py  urls.py  worker_enabled.py  wsgi.py
worker/src/flow/: registry.py
worker/src/flow/seamless/: inference.py  pipeline.py
worker/src/flow/zeroshot/: bootstrap.py  device_init.py  mt_assets.py  mt_client.py  mt_savedmodel.py  pipeline.py  stt.py  tts.py
worker/src/flow/zeroswot/: bootstrap.py  inference.py  pipeline.py  tts.py
worker/src/tasks/: tasks.py  video.py
worker/src/video/: admin.py  health_urls.py  serializers.py  services.py  tasks.py  urls.py  views.py
