[tool.poetry]
name = "core-api"
version = "0.1.0"
description = "Multilingual Videos — core API (languages, models, admin)"
authors = ["Nadir Devrishev"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "^5.1"
djangorestframework = "^3.15"
django-cors-headers = "^4.4"
drf-spectacular = "^0.27"
django-environ = "^0.11"
psycopg = { version = "^3.2", extras = ["binary"] }
gunicorn = "^23.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
